fixed incorrect link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <div id="Home">
             <video autoplay muted loop id="Typing_Video">
                 <source src="images/video/Typing.mp4" type="video/mp4">
-                <!--Display message if video fails to run-->
                 Your browser does not support HTML5 video.
             </video>
         </div>
@@ -85,7 +84,7 @@
                 </div>
                 <br> <!-- Adds a space between the slideshow images and the dots -->
 
-                <!-- Slideshow dots (these are another way for users to navigate through the slideshow) -->
+                <!-- Slideshow dots -->
                 <div style="text-align: center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -126,7 +125,7 @@
             </div>
             <!-- Right column -->
             <div class="Column_2">
-                <a href="https://github.com/the-tech-academy" target="_blank"><img src="images/GitHub.png"></a>
+                <a href="https://github.com/the-heather" target="_blank"><img src="images/GitHub.png"></a>
             </div>
         </div>
 
@@ -134,7 +133,7 @@
          <div id="Contact">
             <button onclick="openForm()" class="Pop_Up_Button">CONTACT</button>
             <div class="form-popup" id="myForm">
-                 <form action="https://formspree.io/info@learncodinganywhere.com" method="POST" class="form-container"> <!-- Here we are using a free online service from https://formspree.io/ to send our contact form to an email address of our choosing - note: it will not run unless live on the internet, you have to push it to your online website first -->
+                 <form action="https://formspree.io/f/mvolbeon" method="POST" class="form-container"> 
                      <h1>Contact</h1>
                      <label for="name"><b>Name</b></label>
                        <input type="text" placeholder="Type your name here" name="name" required>
