--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <meta name="viewport" content="width=device-width" />
         <title>Heather Shultz</title>
         <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Quicksand:wght@300;700&display=swap" rel="stylesheet">
     
     </head>
 
@@ -44,8 +47,8 @@
             </strong>
         </div>
 
-         <!-- Slideshow section added -->
-         <div id="Slideshow">
+        <!-- Slideshow section added -->
+        <div id="Slideshow">
             <div id="Slideshow_Background"> 
                 <div id="Slideshow_Container">
                     <!-- Slide 1 of 6 -->
@@ -129,26 +132,25 @@
             </div>
         </div>
 
-         <!-- Contact form -->
-         <div id="Contact">
+        <!-- Contact form -->
+        <div id="Contact">
             <button onclick="openForm()" class="Pop_Up_Button">CONTACT</button>
             <div class="form-popup" id="myForm">
-                 <form action="https://formspree.io/f/mvolbeon" method="POST" class="form-container"> 
-                     <h1>Contact</h1>
-                     <label for="name"><b>Name</b></label>
-                       <input type="text" placeholder="Type your name here" name="name" required>
-                     <label for="phone"><b>Phone</b></label>
-                       <input type="text" placeholder="Type your phone number here" name="phone">
-                     <label for="email"><b>Email</b></label>		
-                       <input type="text" placeholder="Type your email address here" name="email" required>
-                     <label for="message"><b>Message</b></label>
-                       <input type="text" placeholder="Type your message here" name="message">
-          
-                     <button type="submit" class="btn">SUBMIT</button>
-                     <button type="button" class="btn cancel" onclick="closeForm()">CLOSE</button>
-                 </form>
+                <form action="https://formspree.io/f/mvolbeon" method="POST" class="form-container">
+                    <h1>Contact</h1>
+                    <label for="name"><b>Name</b></label>
+                        <input type="text" placeholder="Type your name here" name="name" required>
+                    <label for="phone"><b>Phone</b></label>
+                        <input type="text" placeholder="Type your phone number here" name="phone">
+                    <label for="email"><b>Email</b></label>
+                        <input type="text" placeholder="Type your email address here" name="email" required>
+                    <label for="message"><b>Message</b></label>
+                        <input type="text" placeholder="Type your message here" name="message">
+                    <button type="submit" class="btn">SUBMIT</button>
+                    <button type="button" class="btn cancel" onclick="closeForm()">CLOSE</button>
+                </form>
             </div>
-         </div>
+        </div>
 
         <!--Footer section-->
         <footer>
